# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.1.0] - 2023-03-01

### Security

#### auth.py 

-preparation of sql queries at line 43, 71, 114
-hash of the password before passing it to the db at line 43

#### blog.py

-preparation of sql queries at line 58, 86, 126, 127, 147

### Fixed

#### auth.py

-hash of the password before its validity in the base at line 76

## [1.1.1] - 2023-03-03

### Security

#### login.html 

-Sanitazing at line 8 with a regex and at line 10

#### register.html

-Sanitazing at line 8 with a regex and at line 10 require at least 8 char long for a password

### auth.py 

-At line 31, 32, 68 and 69, added escape to input fields

### Fixed

#### blog.py

-Fixing SQL querie at line 136